--- a/package.json
+++ b/package.json
@@ -8,6 +8,11 @@
     "build": "vite build",
     "preview": "vite preview",
     "prettier": "prettier . --write",
+    "lint": "eslint . --fix",
+    "prepare": "husky"
+  },
+  "lint-staged": {
+    "prettier": "prettier . --write",
     "lint": "eslint . --fix"
   },
   "devDependencies": {
@@ -16,6 +21,8 @@
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.4",
     "globals": "^16.4.0",
+    "husky": "^9.1.7",
+    "lint-staged": "^16.2.4",
     "prettier": "3.6.2",
     "vite": "^7.1.7"
   },
